# PICO-blue-chords

./: .gitignore  BMSPA_font.h  CMakeLists.txt  PICO-blue-chords.c  README.md  acme_5_outlines_font.h  bubblesstandard_font.h  crackers_font.h  keyscan.c  keyscan.h  lwipopts.h  messages.c  messages.h  picow_bt_example_common.c  picow_bt_example_common.h  picow_bt_example_poll.c
PICO-blue-chords-pcb/: #auto_saved_files#  PICO-blue-chords-pcb.kicad_pcb  PICO-blue-chords-pcb.kicad_prl  PICO-blue-chords-pcb.kicad_pro  PICO-blue-chords-pcb.kicad_sch  PICO-blue-chords-pcb.kicad_sch-bak  Symbols.kicad_sym  _autosave-PICO-blue-chords-pcb.kicad_pcb  _autosave-PICO-blue-chords-pcb.kicad_sch  _autosave-flippedkeyboard.kicad_pcb  fp-info-cache  fp-lib-table  partsdump.py
PICO-blue-chords-pcb/FlippedKeys.pretty/: SW_Hotswap_Kailh_Choc_V1.kicad_mod  SW_Hotswap_Kailh_Choc_V_flippy.kicad_mod  SW_Hotswap_Kailh_MX.kicad_mod
PICO-blue-chords-pcb/RobsStuff.pretty/: MODULE_SC0918.kicad_mod  partsdump.py
PICO-blue-chords-pcb/python/: make-layout.py  safety.kicad_sch
case/: PCB and case.FCStd  PCB and case.FCStd1  PICO-blue-chords case.FCMacro  PICO-blue-chords-case-builder.FCMacro
doc/: PICO-Chord keyboard documentation.docx
uf2 files/: Left_Handed_Keyboard.uf2  Right_Handed_Keyboard.uf2
